deployment/gcp/kubernetes_configs/sample-apache-web.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-sample
spec:
  type: NodePort
  selector:
    app: frontend-sample
  ports:
    - port: 80
      targetPort: 80
      name: http
---
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: frontend-sample
  labels:
    app: frontend-sample
spec:
  template:
    metadata:
      labels:
        app: frontend-sample
    spec:      
      containers:
      - image: httpd:2.4
        name: frontend-sample        
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: frontend-sample
