deployment/gcp/kubernetes_configs/ingress-web-main.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-web-main
  annotations:
    # Use a static ip
    kubernetes.io/ingress.global-static-ip-name: ip-web-main
    # enable session persistence for one or multiple services
    nginx.com/sticky-cookie-services: "serviceName=auth-keycloak srv_id expires=1h path=/auth;"
spec:
  rules:
  - host: tpm.nebulae.com.co
    http:
      paths:  
      - path: /*
        backend:
          serviceName: auth-keycloak
          servicePort: 80
      - path: /sample/*
        backend:
          serviceName: frontend-sample
          servicePort: 80      
      - path: /emi/*
        backend:
          serviceName: frontend-emi
          servicePort: 80     
      # - path: /api/graphql
      #   backend:
      #     serviceName: api-apollo
      #     servicePort: 8080
